Added some basic product details.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   
 
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
 		rel="stylesheet" type="text/css">
 
@@ -56,18 +57,30 @@
    	}
 	
   	.heading, .subheading {
-  		font-family: Ubuntu, Helvetica, Arial, sans-serif;
+  		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   		text-align: center;
   	}
 
+	.heading , .native-logo {
+		font-family: 'Architects daughter', 'Helvetica Neueu', Helvetica;
+	}
+
+	.heading h1 {
+		font-size: 52px;
+	}
+	
+	.subheading {
+		color: #adadad;
+	}
+
   	p.lead {
-  		padding-top: 1.5%;
-  		font-size: 24px;
+  		padding-top: 0.35%;
+  		font-size: 18px;
   		line-height: 30px;
   	}
 
   	p {
-  		font-size: 18px;
+  		font-size: 16px;
   		line-height: 24px;
   	}
 
@@ -97,7 +110,7 @@
     .copy {
       padding-top: 2.5%;
       padding-bottom: 2.5%;
-      text-align: justify;
+      /* text-align: justify; */
     }
 
     .asset {
@@ -149,18 +162,18 @@
         
         <div class="row-fluid heading">
           <div class="span12">
-            <h1>Product</h1>
+            <h1>Khoofiya</h1>
           </div>
         </div>
         <div class="row-fluid subheading">
           <div class="span12">
-            <p class="lead">Some description</p>
+            <p class="lead">Your stuff is *secret*</p>
           </div>
         </div>
 
         <div class="row-fluid pitch">
           <div class="span5 offset1 video">
-            <img class="img-polaroid" src="http://placehold.it/480x300">
+            <img class="img-polaroid" src="http://farm4.staticflickr.com/3381/4595284293_990cc87346.jpg">
           </div>
 
           <!-- statistics, social and share. actions div. -->
@@ -169,12 +182,12 @@
               <div class="statistics">
                 <div class="span4">
                   <div class="linediv-l">
-                    <h3>1000</h3> <p>backers</p>
+                    <h3>0</h3> <p>backers</p>
                   </div>
                 </div>
                 <div class="span4">
                     <div class="linediv-c">
-                      <h3>$5000</h3> <p>of $10,000</p>
+                      <h3>$0</h3> <p>of&nbsp; $50,000</p>
                     </div>
                 </div>
                 <div class="span4">
@@ -188,8 +201,8 @@
             <div class="span10 offset1">
               <!-- progress bar -->
               <div class="thermometer progress active">
-                <div class="bar bar-success" style="width: 60%"></div>
-                <div class="bar bar-warning" style="width: 40%"></div>
+                <div class="bar bar-success" style="width: 0%"></div>
+                <div class="bar bar-warning" style="width: 100%"></div>
               </div>
             </div>
 
@@ -206,24 +219,36 @@
 
         <!-- Marketing copy begins -->
         <div class="row-fluid section1">
-          <div class="span5 offset1 asset">
-            <img class="img-polaroid" src="http://placehold.it/480x300">
+          <div class="span5 offset1 asset" style="text-align: right">
+            <img class="img-polaroid" src="http://farm4.staticflickr.com/3700/9018738446_aba55c045a.jpg" height="300" width="300">
           </div>
           <div class="span5 copy">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis facilisis velit, et pharetra metus. Suspendisse ut elit sed diam tincidunt ullamcorper. Phasellus euismod nulla a vehicula commodo. Sed mollis cursus imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis facilisis velit, et pharetra metus. Suspendisse ut elit sed diam tincidunt ullamcorper. Phasellus euismod nulla a vehicula commodo. Sed mollis cursus imperdiet.
+		The world of digital communication has been horribly compromised. Edward Snowden's revalations have confirmed what we believed for quite some time. It is the <strong>extent</strong> that we had no clue of. Every single platform of communication, seems to have been compromised. <br>
+		<br><span class="native-logo" style="font-size: 22px;">Khoofiya</span>&nbsp;  holds the key to a secured platform of communication!<br><br>
+		<strong>But</strong> even the giants of this industry couldn't hold fast against the might of governmental agencies, what chance does Khoofiya hold?
             </p> 
           </div>
         </div>
 
         <div class="row-fluid section2">
           <div class="span5 offset1 copy copy-right">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis facilisis velit, et pharetra metus. Suspendisse ut elit sed diam tincidunt ullamcorper. Phasellus euismod nulla a vehicula commodo. Sed mollis cursus imperdiet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis facilisis velit, et pharetra metus. Suspendisse ut elit sed diam tincidunt ullamcorper. Phasellus euismod nulla a vehicula commodo. Sed mollis cursus imperdiet.
+            <p style="margin-top: 5%">
+		The secret lies in <strong>not storing anything</strong>!
+		<ul>
+			<li>All your messages will be encrypted using asymmetric keys.</li>
+			<li>None of your messages will be stored on our servers.</li>
+			<li>Every piece of multimedia will be immediately transferred to your recipients.</li>
+		</ul>	
+		<br><br>
+		<span class="native-logo" style="font-size: 22px">In short,</span> if there's no data to be snooped upon, who's going to steal it anyways?
+		<br><br>
+		We just wanted to have a way to share our things privately amongst our friends and family. And then we thought, why not just build it for everyone
+		out there?!
             </p> 
           </div>
           <div class="span5 asset">
-            <img class="img-polaroid" src="http://placehold.it/480x300">
+            <img class="img-polaroid" src="http://desktop-wallpapers.net/wallpapers/cartoons/51/1280_Homer_simpson.jpg" height="300" width="500">
           </div>
         </div>
 
@@ -236,12 +261,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                     data-present="#accordion2" href="#collapseOne">
-                    What exactly does FAQ stand for?
+			What does <span class="native-logo">Khoofiya</span> mean?
                   </a>
                 </div>
                 <div class="accordion-body collapse" id="collapseOne">
                   <div class="accordion-inner">
-                    Frequently Asked Questions
+			It's a Hindi word, which translates to "Secret" in English.
                   </div>
                 </div>
               </div>
@@ -249,12 +274,30 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                     data-present="#accordion2" href="#collapseTwo">
-                    What exactly does FAQ stand for?
+			If you're not going to store user info, how will you make money?
                   </a>
                 </div>
                 <div class="accordion-body collapse" id="collapseTwo">
                   <div class="accordion-inner">
-                    Frequently Asked Questions
+			<span class="native-logo">Khoofiya</span> will primarily rely on the funds we can raise through this campaign,
+			and an annual fee, which shouldn't be too high to deter users. In time, we would explore other avenues of 
+			revenue based on sponsored messages, something like Twitter does. But obviously, the ads won't be targeted, since
+			we really won't have any relevant user data.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                    data-present="#accordion3" href="#collapseThree">
+			What about my contacts list? Won't you be storing that?
+                  </a>
+                </div>
+                <div class="accordion-body collapse" id="collapseThree">
+                  <div class="accordion-inner">
+			That will be entirely your decision. If you want portability of list across devices, then yes, you'll need to explicitly
+			give us permission to store your contacts. Otherwise, we will simply rely on Global and encrypted user ID hashes to 
+			match up your contacts.
                   </div>
                 </div>
               </div>
